add ../ to all references on pages other than the index

--- a/source/building_seal.html
+++ b/source/building_seal.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="Assets/Logos/SBP-icon2.png">
+    <link rel="icon" href="../Assets/Logos/SBP-icon2.png">
 
     <title>SBP - Building Seal</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/products.css" rel="stylesheet">
-    <link href="css/navbar.css" rel="stylesheet">
-    <link href="css/footer.css" rel="stylesheet">
+    <link href="../css/fonts.css" rel="stylesheet">
+    <link href="../css/products.css" rel="stylesheet">
+    <link href="../css/navbar.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
   </head>
 
   <body>
@@ -24,8 +24,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-              <a class="navbar-brand" href="index.html">
-                <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long.png">
+              <a class="navbar-brand" href="../index.html">
+                <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long.png">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,20 +34,20 @@
               <div class="collapse navbar-collapse links" id="navbarsExample07">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" style="color: #8cc640;" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown07">
-                      <a class="dropdown-item" href="gun_nails.html">Gun Nails</a>
-                      <a class="dropdown-item" href="fixings.html">Fixings</a>
-                      <a class="dropdown-item" href="brad_nails.html">Brad Nails</a>
+                      <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
+                      <a class="dropdown-item" href="../fixings.html">Fixings</a>
+                      <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
                       <a class="dropdown-item" href="#">Building Seal</a>
-                      <a class="dropdown-item" href="marker_paint.html">Marker Paint</a>
+                      <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="order.html">Cart</a>
+                    <a class="nav-link" href="../order.html">Cart</a>
                   </li>
                 </ul>
                 <!--<form class="form-inline my-2 my-md-0">
@@ -66,7 +66,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Building Seal/BKBS8.png">
+                  <img class="card-img-top" src="../Assets/Building Seal/BKBS8.png">
                   <div class="card-body">
                     <p class="card-title">8mm – 12mm</p>
                     <p class="card-text"> - Building King Building Seal.</p>
@@ -84,7 +84,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Building Seal/BKBS15.png">
+                    <img class="card-img-top" src="../Assets/Building Seal/BKBS15.png">
                     <div class="card-body">
                       <p class="card-title">15mm – 22mm</p>
                       <p class="card-text"> - Building King Building Seal.</p>
@@ -102,7 +102,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Building Seal/BKBS25.png">
+                    <img class="card-img-top" src="../Assets/Building Seal/BKBS25.png">
                     <div class="card-body">
                       <p class="card-title">25mm – 32mm</p>
                       <p class="card-text"> - Building King Building Seal.</p>
@@ -120,7 +120,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Building Seal/BKBS42.png">
+                    <img class="card-img-top" src="../Assets/Building Seal/BKBS42.png">
                     <div class="card-body">
                       <p class="card-title">42mm – 52mm</p>
                       <p class="card-text"> - Building King Building Seal.</p>
@@ -138,7 +138,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Building Seal/BKBS50.png">
+                    <img class="card-img-top" src="../Assets/Building Seal/BKBS50.png">
                     <div class="card-body">
                       <p class="card-title">50mm – 65mm</p>
                       <p class="card-text"> - Building King Building Seal.</p>
@@ -156,7 +156,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Building Seal/BKBS75.png">
+                    <img class="card-img-top" src="../Assets/Building Seal/BKBS75.png">
                     <div class="card-body">
                       <p class="card-title">75mm – 90mm</p>
                       <p class="card-text"> - Building King Building Seal.</p>
@@ -174,7 +174,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Building Seal/BKBS110.png">
+                    <img class="card-img-top" src="../Assets/Building Seal/BKBS110.png">
                     <div class="card-body">
                       <p class="card-title">100mm – 110mm</p>
                       <p class="card-text"> - Building King Building Seal.</p>
@@ -192,7 +192,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Building Seal/SEAL125.png">
+                  <img class="card-img-top" src="../Assets/Building Seal/SEAL125.png">
                   <div class="card-body">
                     <p class="card-title">125mm – 135mm</p>
                     <p class="card-text"> - Building King Building Seal.</p>
@@ -210,7 +210,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="Assets/Building Seal/SEAL150.png">
+                <img class="card-img-top" src="../Assets/Building Seal/SEAL150.png">
                 <div class="card-body">
                   <p class="card-title">150mm – 165mm</p>
                   <p class="card-text"> - Building King Building Seal.</p>
@@ -228,7 +228,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Building Seal/SEAL200.png">
+              <img class="card-img-top" src="../Assets/Building Seal/SEAL200.png">
               <div class="card-body">
                 <p class="card-title">200mm – 220mm</p>
                 <p class="card-text"> - Building King Building Seal.</p>
@@ -272,9 +272,9 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/holder.min.js"></script>
-  <script src="js/functions.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/holder.min.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 </html>
