--- a/source/gun_nails.html
+++ b/source/gun_nails.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="Assets/Logos/SBP-icon2.png">
+  <link rel="icon" href="../Assets/Logos/SBP-icon2.png">
 
   <title>SBP - Gun Nails</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/fonts.css" rel="stylesheet">
-  <link href="css/products.css" rel="stylesheet">
-  <link href="css/navbar.css" rel="stylesheet">
-  <link href="css/footer.css" rel="stylesheet">
+  <link href="../css/fonts.css" rel="stylesheet">
+  <link href="../css/products.css" rel="stylesheet">
+  <link href="../css/navbar.css" rel="stylesheet">
+  <link href="../css/footer.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long.png">
+          <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long.png">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
           aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,21 +36,21 @@
         <div class="collapse navbar-collapse links" id="navbarsExample07">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" style="color: #8cc640;" href="http://example.com" id="dropdown07"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu" aria-labelledby="dropdown07">
                 <a class="dropdown-item" href="#">Gun Nails</a>
-                <a class="dropdown-item" href="fixings.html">Fixings</a>
-                <a class="dropdown-item" href="brad_nails.html">Brad Nails</a>
-                <a class="dropdown-item" href="building_seal.html">Building Seal</a>
-                <a class="dropdown-item" href="marker_paint.html">Marker Paint</a>
+                <a class="dropdown-item" href="../fixings.html">Fixings</a>
+                <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
+                <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
+                <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="order.html">Cart</a>
+              <a class="nav-link" href="../order.html">Cart</a>
             </li>
           </ul>
           <!--<form class="form-inline my-2 my-md-0">
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKHDG90NG.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKHDG90NG.jpg">
               <div class="card-body">
                 <p class="card-title">Hot Dip Galvanised</p>
                 <p class="card-text"> - 90mm X 3.15mm, D-Head Smooth Gun Nail.</p>
@@ -88,7 +88,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKB90NG.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKB90NG.jpg">
               <div class="card-body">
                 <p class="card-title">Brights</p>
                 <p class="card-text"> - 90mm X 3.15mm, D-Head Smooth Gun Nail.</p>
@@ -107,7 +107,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKHDG65NG.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKHDG65NG.jpg">
               <div class="card-body">
                 <p class="card-title">Hot Dip Galvanised Ring Shank</p>
                 <p class="card-text"> - 65mm x 2.87mm Offset - Round head.</p>
@@ -126,7 +126,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKSS65.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKSS65.jpg">
               <div class="card-body">
                 <p class="card-title">65mm 316 Stainless Steel</p>
                 <p class="card-text"> - 65 x 2.87mm- D-Head Ring Gun Nail.</p>
@@ -145,7 +145,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKSS90.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKSS90.jpg">
               <div class="card-body">
                 <p class="card-title">90mm 316 Stainless Steel</p>
                 <p class="card-text"> - 90 x 3.1mm- D-Head Ring Gun Nail.</p>
@@ -164,7 +164,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKSS50.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKSS50.jpg">
               <div class="card-body">
                 <p class="card-title">304 Stainless Steel</p>
                 <p class="card-text"> - 50mm x 2.8mm Full Round Ring Drive Plastic Collated Gun Nail.</p>
@@ -183,7 +183,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="Assets/Gun Nails/BKGAS.jpg">
+              <img class="card-img-top" src="../Assets/Gun Nails/BKGAS.jpg">
               <div class="card-body">
                 <p class="card-title">Gun Fuel Cells</p>
                 <p class="card-text"> - 3x Nail Gun Fuel Cells.</p>
@@ -230,10 +230,10 @@
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/holder.min.js"></script>
-  <script src="js/functions.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/holder.min.js"></script>
+  <script src="../js/functions.js"></script>
 
 </body>
 
