--- a/source/brad_nails.html
+++ b/source/brad_nails.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="Assets/Logos/SBP-icon2.png">
+    <link rel="icon" href="../Assets/Logos/SBP-icon2.png">
 
     <title>SBP - Brad Nails</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/products.css" rel="stylesheet">
-    <link href="css/navbar.css" rel="stylesheet">
-    <link href="css/footer.css" rel="stylesheet">
+    <link href="../css/fonts.css" rel="stylesheet">
+    <link href="../css/products.css" rel="stylesheet">
+    <link href="../css/navbar.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
   </head>
 
   <body>
@@ -24,8 +24,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-              <a class="navbar-brand" href="index.html">
-                <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long.png">
+              <a class="navbar-brand" href="../index.html">
+                <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long.png">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,20 +34,20 @@
               <div class="collapse navbar-collapse links" id="navbarsExample07">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" style="color: #8cc640;" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown07">
-                      <a class="dropdown-item" href="gun_nails.html">Gun Nails</a>
-                      <a class="dropdown-item" href="fixings.html">Fixings</a>
+                      <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
+                      <a class="dropdown-item" href="../fixings.html">Fixings</a>
                       <a class="dropdown-item" href="#">Brad Nails</a>
-                      <a class="dropdown-item" href="building_seal.html">Building Seal</a>
-                      <a class="dropdown-item" href="marker_paint.html">Marker Paint</a>
+                      <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
+                      <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="order.html">Cart</a>
+                    <a class="nav-link" href="../order.html">Cart</a>
                   </li>
                 </ul>
                 <!--<form class="form-inline my-2 my-md-0">
@@ -66,7 +66,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Brad Nails/BKAB32.jpg">
+                  <img class="card-img-top" src="../Assets/Brad Nails/BKAB32.jpg">
                   <div class="card-body">
                     <p class="card-title">32mm 16G Angled Brads</p>
                     <p class="card-text"> - Building King 32mm 16G Galvanised 20 Degree Angled Brads.</p>
@@ -85,7 +85,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Brad Nails/BKSB32.jpg">
+                    <img class="card-img-top" src="../Assets/Brad Nails/BKSB32.jpg">
                     <div class="card-body">
                       <p class="card-title">32mm 16G Straight Brads</p>
                       <p class="card-text"> - Building King 32mm 16G Galvanised Straight Brads.</p>
@@ -104,7 +104,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Brad Nails/BKAB45.jpg">
+                    <img class="card-img-top" src="../Assets/Brad Nails/BKAB45.jpg">
                     <div class="card-body">
                       <p class="card-title">45mm 16G Angled Brads</p>
                       <p class="card-text"> - Building King 45mm 16G Galvanised 20 Degree Angled Brads.</p>
@@ -123,7 +123,7 @@
               </div>
               <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="Assets/Brad Nails/BKSB45.jpg">
+                    <img class="card-img-top" src="../Assets/Brad Nails/BKSB45.jpg">
                     <div class="card-body">
                       <p class="card-title">45mm 16G Straight Brads</p>
                       <p class="card-text"> - Building King 45mm 16G Galvanised Straight Brads.</p>
@@ -168,9 +168,9 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/holder.min.js"></script>
-  <script src="js/functions.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/holder.min.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 </html>
