--- a/source/fixings.html
+++ b/source/fixings.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="Assets/Logos/SBP-icon2.png">
+    <link rel="icon" href="../Assets/Logos/SBP-icon2.png">
 
     <title>SBP - Fixings</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/products.css" rel="stylesheet">
-    <link href="css/navbar.css" rel="stylesheet">
-    <link href="css/footer.css" rel="stylesheet">
+    <link href="../css/fonts.css" rel="stylesheet">
+    <link href="../css/products.css" rel="stylesheet">
+    <link href="../css/navbar.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
   </head>
 
   <body>
@@ -24,8 +24,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-              <a class="navbar-brand" href="index.html">
-                <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long.png">
+              <a class="navbar-brand" href="../index.html">
+                <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long.png">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,20 +34,20 @@
               <div class="collapse navbar-collapse links" id="navbarsExample07">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" style="color: #8cc640;" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown07">
-                      <a class="dropdown-item" href="gun_nails.html">Gun Nails</a>
+                      <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
                       <a class="dropdown-item" href="#">Fixings</a>
-                      <a class="dropdown-item" href="brad_nails.html">Brad Nails</a>
-                      <a class="dropdown-item" href="building_seal.html">Building Seal</a>
-                      <a class="dropdown-item" href="marker_paint.html">Marker Paint</a>
+                      <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
+                      <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
+                      <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="order.html">Cart</a>
+                    <a class="nav-link" href="../order.html">Cart</a>
                   </li>
                 </ul>
                 <!--<form class="form-inline my-2 my-md-0">
@@ -66,7 +66,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="Assets/Fixings/BKBS500.jpg">
+                <img class="card-img-top" src="../Assets/Fixings/BKBS500.jpg">
                 <div class="card-body">
                   <p class="card-title">Batten Screws</p>
                   <p class="card-text"> - 14g x 100mm Mechanical Galvanised Bugle Head Hex Drive Batten Screws.</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BS75.png">
+                  <img class="card-img-top" src="../Assets/Fixings/BS75.png">
                   <div class="card-body">
                     <p class="card-title">Batten Screws</p>
                     <p class="card-text"> - 14g x 75mm Mechanical Galvanised Class 4 Bugle Head Hex Drive Batten.</p>
@@ -104,7 +104,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BKBS100.jpg">
+                  <img class="card-img-top" src="../Assets/Fixings/BKBS100.jpg">
                   <div class="card-body">
                     <p class="card-title">Batten Screws</p>
                     <p class="card-text"> - 14g x 100mm Mechanical Galvanised Bugle Head Hex Drive Batten.</p>
@@ -123,7 +123,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BS100SS.png">
+                  <img class="card-img-top" src="../Assets/Fixings/BS100SS.png">
                   <div class="card-body">
                     <p class="card-title">Batten Screws</p>
                     <p class="card-text"> - 14g x 100mm Stainless Steel 316 Bugle Head Hex Drive Batten.</p>
@@ -142,7 +142,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BS125.png">
+                  <img class="card-img-top" src="../Assets/Fixings/BS125.png">
                   <div class="card-body">
                     <p class="card-title">Batten Screws</p>
                     <p class="card-text"> - 14g x 125mm Mechanical Galvanised Class 4 Bugle Head Hex Drive Batten.</p>
@@ -161,7 +161,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BS150.png">
+                  <img class="card-img-top" src="../Assets/Fixings/BS150.png">
                   <div class="card-body">
                     <p class="card-title">Batten Screws</p>
                     <p class="card-text"> - 14g x 150mm Mechanical Galvanised Class 4 Bugle Head Hex Drive Batten.</p>
@@ -180,7 +180,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BKCS20.jpg">
+                  <img class="card-img-top" src="../Assets/Fixings/BKCS20.jpg">
                   <div class="card-body">
                     <p class="card-title">Concrete Screws</p>
                     <p class="card-text"> - 14g x 150mm Mechanical Galvanised Class 4 Bugle Head Hex Drive Batten.<br>
@@ -200,7 +200,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BKSD65B.png">
+                  <img class="card-img-top" src="../Assets/Fixings/BKSD65B.png">
                   <div class="card-body">
                     <p class="card-title">Decking Screws</p>
                     <p class="card-text"> - Torx Drive Decking Screws<br>
@@ -224,7 +224,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                  <img class="card-img-top" src="Assets/Fixings/BKSD65.jpg">
+                  <img class="card-img-top" src="../Assets/Fixings/BKSD65.jpg">
                   <div class="card-body">
                     <p class="card-title">Decking Screws</p>
                     <p class="card-text"> - Building King Torx Drive Decking Screws<br>
@@ -275,9 +275,9 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/holder.min.js"></script>
-  <script src="js/functions.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/holder.min.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 </html>
