--- a/source/order.html
+++ b/source/order.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="Assets/Logos/SBP-icon2.png">
+    <link rel="icon" href="../Assets/Logos/SBP-icon2.png">
 
-    <title>SBP - Gun Nails</title>
+    <title>SBP - Order</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/products.css" rel="stylesheet">
-    <link href="css/navbar.css" rel="stylesheet">
-    <link href="css/order.css" rel="stylesheet">
-    <link href="css/footer.css" rel="stylesheet">
+    <link href="../css/fonts.css" rel="stylesheet">
+    <link href="../css/products.css" rel="stylesheet">
+    <link href="../css/navbar.css" rel="stylesheet">
+    <link href="../css/order.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
 </head>
 
 <body onload="createOrder()">
@@ -26,8 +26,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long.png">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long.png">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
                     aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,18 +37,18 @@
                 <div class="collapse navbar-collapse links" id="navbarsExample07">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="http://example.com"
                                 id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Products</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" href="gun_nails.html">Gun Nails</a>
-                                <a class="dropdown-item" href="fixings.html">Fixings</a>
-                                <a class="dropdown-item" href="brad_nails.html">Brad Nails</a>
-                                <a class="dropdown-item" href="building_seal.html">Building Seal</a>
-                                <a class="dropdown-item" href="marker_paint.html">Marker Paint</a>
+                                <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
+                                <a class="dropdown-item" href="../fixings.html">Fixings</a>
+                                <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
+                                <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
+                                <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
                             </div>
                         </li>
                         <li class="nav-item active">
@@ -80,7 +80,7 @@
                     
                 </tbody>
             </table>
-            <a href="order_confirmation.html"><div id="nextButton" class="next-btn noselect">Next</div></a>
+            <a href="../order_confirmation.html"><div id="nextButton" class="next-btn noselect">Next</div></a>
         </div>
     </main>
 
@@ -98,10 +98,10 @@
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/holder.min.js"></script>
-    <script src="js/functions.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/holder.min.js"></script>
+    <script src="../js/functions.js"></script>
 </body>
 
 </html>
