fixed marker paint nav, hopefully fixed redirect when submitting order and removed order from session storage once submitted

--- a/source/marker_paint.html
+++ b/source/marker_paint.html
@@ -41,7 +41,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown07">
                       <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
                       <a class="dropdown-item" href="../fixings.html">Fixings</a>
-                      <a class="dropdown-item" href="#">Brad Nails</a>
+                      <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
                       <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
                       <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
                     </div>
