updated order submitted message

--- a/source/submit.html
+++ b/source/submit.html
@@ -71,7 +71,7 @@
             </div>
 
                 <p class="thanks">Thank you for your order.</p>
-                <p class="info">You should receive an email shortly with your order confirmation and payment details.<br>We will begin processing your order shortly.</p>
+                <p class="info">You should receive an email in the next couple minutes with your order confirmation and payment details.<br>We will begin processing your order shortly.</p>
             
         </div>
     </main>
