added background to index, restyled header for all pages

--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container">
             <a class="navbar-brand" href="index.html">
-              <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long.png">
+              <img class="masthead-brand" src="Assets/Logos/Southern Building Products_long_bright.png">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse links" id="navbarsExample07">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" style="color: #8cc640;" href="index.html">Home</a>
+                  <a class="nav-link" style="color: #c0ff59;" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
