--- a/source/submit.html
+++ b/source/submit.html
@@ -26,38 +26,40 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="../index.html">
-                    <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long.png">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
-                    aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="centerContainer">
+                    <a class="navbar-brand" href="../index.html">
+                        <img class="masthead-brand" src="../Assets/Logos/Southern Building Products_long_bright.png">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
+                        aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse links" id="navbarsExample07">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="http://example.com"
-                                id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">Products</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
-                                <a class="dropdown-item" href="../fixings.html">Fixings</a>
-                                <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
-                                <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
-                                <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
-                            </div>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" style="color: #8cc640;" href="#">Cart</a>
-                        </li>
-                    </ul>
-                    <!--<form class="form-inline my-2 my-md-0">
-                  <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </form>-->
+                    <div class="collapse navbar-collapse links" id="navbarsExample07">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item dropdown active">
+                                <a class="nav-link dropdown-toggle" style="color: #c0ff59;" href="http://example.com"
+                                    id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">Products</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdown07">
+                                    <a class="dropdown-item" href="../gun_nails.html">Gun Nails</a>
+                                    <a class="dropdown-item" href="../fixings.html">Fixings</a>
+                                    <a class="dropdown-item" href="../brad_nails.html">Brad Nails</a>
+                                    <a class="dropdown-item" href="../building_seal.html">Building Seal</a>
+                                    <a class="dropdown-item" href="../marker_paint.html">Marker Paint</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../order.html">Cart</a>
+                            </li>
+                        </ul>
+                        <!--<form class="form-inline my-2 my-md-0">
+                          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                        </form>-->
+                    </div>
                 </div>
             </div>
         </nav>
@@ -65,23 +67,25 @@
 
     <main role="main">
         <div class="container">
-            
+
             <div class="title">
                 <p>Cart -> Details -> Submitted</p>
             </div>
 
-                <p class="thanks">Thank you for your order.</p>
-                <p class="info">You should receive an email in the next couple minutes with your order confirmation and payment details.<br>We will begin processing your order shortly.</p>
-            
+            <p class="thanks">Thank you for your order.</p>
+            <p class="info">You should receive an email in the next couple minutes with your order confirmation and
+                payment details.<br>We will begin processing your order shortly.</p>
+
         </div>
     </main>
 
 
     <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p><span style="color: #333">&#169; 2021</span> Southern Building Products Ltd. <span style="color: #333">Contact:</span> sales.sbp@icloud.com</p>
+            <p><span style="color: #333">&#169; 2021</span> Southern Building Products Ltd. <span
+                    style="color: #333">Contact:</span> sales.sbp@icloud.com</p>
         </div>
-      </footer>
+    </footer>
 
     <!-- Bootstrap core JavaScript
       ================================================== -->
