updated position of next button for order form and added in delivery prices

--- a/source/order.html
+++ b/source/order.html
@@ -81,7 +81,10 @@
                     
                 </tbody>
             </table>
-            <a href="../order_confirmation.html"><div id="nextButton" class="next-btn noselect">Next</div></a>
+            <div class="next-btn-container">
+              <a href="../order_confirmation.html"><div id="nextButton" class="next-btn noselect">Next</div></a>
+            </div>
+            
         </div>
     </main>
 
