final visual tweaks on order stuff

--- a/source/order_confirmation.html
+++ b/source/order_confirmation.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button class="btn btn-primary next-btn next-btn-container noselect" type="submit" onclick="submitOrder()">Submit</button>
+                    <button class="btn btn-primary next-btn next-btn-container submit-btn noselect" type="submit" onclick="submitOrder()">Submit</button>
                 </div>
             </form>
             
