--- a/source/brad_nails.html
+++ b/source/brad_nails.html
@@ -20,7 +20,7 @@
   <link href="../css/footer.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="loadPage()">
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -188,6 +188,7 @@
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/holder.min.js"></script>
   <script src="../js/functions.js"></script>
+  <script src="../js/load.js"></script>
 </body>
 
 </html>
