--- a/source/marker_paint.html
+++ b/source/marker_paint.html
@@ -19,7 +19,7 @@
     <link href="../css/footer.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body onload="loadPage()">
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -176,5 +176,6 @@
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/holder.min.js"></script>
   <script src="../js/functions.js"></script>
+  <script src="../js/load.js"></script>
 </body>
 </html>
