fixed stock amounts not showing on initial load and corrected concrete screws description

--- a/source/fixings.html
+++ b/source/fixings.html
@@ -187,9 +187,9 @@
                   <img class="card-img-top" src="../Assets/Fixings/BKCS20.jpg">
                   <div class="card-body">
                     <p class="card-title">Concrete Screws</p>
-                    <p class="card-text"> - 14g x 150mm Mechanical Galvanised Class 4 Bugle Head Hex Drive Batten.<br>
+                    <p class="card-text"> - 150mm x M12 / 10.9 Grade Concrete Screw with 50mm x 50mm x 3mm Washer.<br>
                         - 13KN AT 900mm max spacing on all concrete foundation types.</p>
-                    <p class="card-text"> -  50 Piece pack.</p>
+                    <p class="card-text"> -  20 Piece pack.</p>
                     <div class="d-flex justify-content-between align-items-center bottom-card">
                       <div id="BKCS20Price" class="price">
                         $51.30
